--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,8 @@ button {
     border-radius: 5px;
     border: none;
 }
-button :hover{
+
+button :hover {
     background-color: blue;
 }
 
@@ -85,6 +86,10 @@ input[type='file'] {
     border-radius: 10px;
 
 }
+.card:hover{
+    transform: scale(1.05);
+    cursor: pointer;
+}
 
 .card .top-left {
     position: absolute;
@@ -112,7 +117,8 @@ input[type='file'] {
     margin-top: 30%;
     margin-left: 10px;
 }
-.extension{
+
+.extension {
     margin: auto;
     text-align: center;
     font-size: 50px;
@@ -122,8 +128,36 @@ input[type='file'] {
     color: black;
     opacity: 0.2;
 }
-.loading{
-    
+
+.loading {
+
     margin: auto;
     color: wheat;
+}
+
+.bar {
+    width: 100%;
+    padding: 25px;
+    color: white;
+    font-size: 25px;
+    display: flex;
+    box-sizing: border-box;
+}
+#hideNavbar{
+    display: none;
+    margin: auto;
+    text-align: center;
+}
+.Navbar{
+    text-align: center;
+    margin: auto;
+    color: antiquewhite;
+    
+}
+
+#internal{
+    text-align: center;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
